--- a/tileset-creator/index.html
+++ b/tileset-creator/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OpenFLAME Tileset Creator</title>
+  <title>OpenFLAME Map</title>
 </head>
 
 <body>
